--- a/gettingstarted/gqlgen.yml
+++ b/gettingstarted/gqlgen.yml
@@ -1,11 +1,17 @@
+# .gqlgen.yml example
+#
+# Refer to https://gqlgen.com/config/
+# for detailed .gqlgen.yml documentation.
+
 schema: schema.graphql
 exec:
-  filename: graph/generated.go
+  filename: generated.go
 model:
-  filename: model/generated.go
+  filename: models_gen.go
+resolver:
+  filename: resolver.go
+  type: Resolver
 
 models:
   Todo:
-    model: github.com/vektah/gqlgen-tutorials/gettingstarted/model.Todo
-  User:
-    model: github.com/vektah/gqlgen-tutorials/gettingstarted/model.User
+    model: github.com/vektah/gqlgen-tutorials/gettingstarted.Todo
