--- a/dataloader/gqlgen.yml
+++ b/dataloader/gqlgen.yml
@@ -30,7 +30,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "github.com/vektah/gqlgen-todos/graph/model"
+  - "gqlgen-tutorials/dataloader/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
